--- a/public/styles.css
+++ b/public/styles.css
@@ -2,6 +2,8 @@ body {
     margin: 0;
     background-image: radial-gradient(circle, #e1e1e1, #e4e4e4, #e7e7e7, #eaeaea, #ededed);
     word-wrap: normal;
+    width: 100;
+    overflow: scroll;
 }
 a {
     color: inherit;
@@ -58,6 +60,8 @@ h3 {
     font-weight: bold;
     font-size: 2vw;
     list-style: none;
+    display: inline-grid;
+    grid-auto-flow: column;
 }
 #ingredientCards li {
     padding: 0;
@@ -67,11 +71,10 @@ h3 {
     border-bottom: solid;
 }
 #ingredientCards ul {
-    padding: 0;
-    display: inline-block;
     margin-left: auto;
     margin-right: auto;
     list-style: none;
+    padding: 0;
 }
 #ingredientCards img {
     width: 20vw;
@@ -85,6 +88,7 @@ button {
     padding: 30px;
 }
 #ingredientCards ul ul{
+    grid-auto-flow: row;
     position: relative;
     width: 20vw;
     height: 28vw;
@@ -180,12 +184,60 @@ i {
 i:hover{
     color: yellow;
 }
+.fas.fa-star{
+    color: yellow;
+}
 #addMore {
     position: fixed;
     margin-top: 4vw;
     margin-left: 3vw;
     z-index: 10;
 }
+#delete {
+    position: fixed;
+    margin-top: 4vw;
+    margin-left: 15vw;
+    z-index: 10;
+}
 .cards {
     margin-top: 3vw;
+}
+#loader p {
+    text-align: center;
+    padding-top: 30%
+}
+#loader {
+    top: 0;
+    height: 100%;
+    width: 100%;
+    position: fixed;
+    display: block;
+    background-color: grey;
+    z-index: 11
+}
+#blocker{
+    position: fixed;
+    display: block;
+    top: 2.5vw;
+    height: 100%;
+    width: 100%;
+}
+#popup{
+    transform: scale(1.5);
+    position: fixed;
+    display: block;
+    height: 40vw;
+    top: 17vw;
+    width: 50vw;
+    margin-left: 25vw;
+    margin-right: 25vw;
+    padding-top: 3vw;
+    z-index: 5;
+    background: rgb(251, 248, 252, .9);
+}
+#popup ul>*:hover{
+    transform: translate(0);
+}
+#shoppingList{
+    padding-top: 10vw;
 }
