--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,12 @@
+:root{
+    --background-color: rgba(21, 25, 38, 1);
+    --title-color: rgb(8,8,8);
+    --text-color2: rgba(208, 232, 242, 1);
+    --text-color: rgba(101, 195, 216, 1);
+    --head-color: rgba(89, 70, 64, 1);
+}
+
+
 body {
     margin: 0;
     background-image: radial-gradient(circle, #e1e1e1, #e4e4e4, #e7e7e7, #eaeaea, #ededed);
@@ -9,41 +18,167 @@ a {
     color: inherit;
     text-decoration: inherit;
 }
-#background {
-    position: fixed;
-    height: auto;
+#title{
+    z-index: 10;
+    position: absolute;
+    margin: auto;
+    margin-left: 15%;
+    margin-top: 15%;
+    font-size: 12.5vw;
+    width: fit-content;
+    text-align: center;
+    border-radius: 2em;
+    color: var(--title-color);
+}
+.fas.fa-chevron-down{
+    font-size: 400%;
+    position: absolute;
+    top: 90%;
+    margin-left: 45%;
+    z-index: 10;
+    color: var(--title-color);
+    animation: fadeIn ease 5s;
+}
+@keyframes fadeIn {
+    0% {
+      opacity:0;
+    }
+    100% {
+      opacity:1;
+    }
+  }
+#backgroundPic1 {
+    object-fit: cover;
+    position: absolute;
+    margin: auto;
+    min-height: 100%;
     width: 100%;
-    top: -70px;
-    z-index: auto;
+}
+.backgroundPic {
+    position: absolute;
+    max-height: 65%;
+    margin-left: 25%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+.backgroundPic:first-of-type{
+    margin-left: 5%;
+    margin-top: 15%;
+    border-radius: 1vw;
+    max-width: 40%;
+}
+.backgroundPic1{
+    float: right;
+    margin-right: 5%;
+    margin-top: 15%;
+    border-radius: 1vw;
+    max-width: 40%;
+}
+.gallery{
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    grid-template-rows: repeat(8,5vw);
+    grid-gap: 2vw;
+    margin: 2vw;
+}
+.gallery img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 1vw;
+}
+.galleryPic:nth-of-type(1){
+    grid-column-start: 5;
+    grid-column-end: 7;
+    grid-row-start: 1;
+    grid-row-end: 5;
+}
+.galleryPic:nth-of-type(2){
+    grid-column-start: 5;
+    grid-column-end: 9;
+    grid-row-start: 5;
+    grid-row-end: 9;
+}
+.galleryPic:nth-of-type(3){
+    grid-column-start: 7;
+    grid-column-end: 9;
+    grid-row-start: 1;
+    grid-row-end: 5;
+}
+.containPic{
+    position: absolute;
+    min-height: 100%;
+    width: 100%;
+    z-index: 20;
+    background: rgb(8,8,8);
+    background: linear-gradient(0deg, rgba(8,8,8,1), rgba(2,0,36,0) 20%);
+}
+.home{
+    background: var(--background-color);
+    position: relative;
+    width: 100%;
+    height: 100%;
+    min-height: 100vh;
+}
+.home p{
+    position: absolute;
+    color: var(--text-color2);
+}
+#firstWords{
+    position: absolute;
+    top: 10%;
+    margin-left: 8%;
+    z-index: 10;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: bold;
+    font-size: 6vw;
 }
 h1 {
     font-family: 'Satisfy', cursive;
     position: relative;
-    font-size: 8vw;
+    font-size: 4vw;
     text-shadow: 3px 3px 2px rgb(255, 245, 230);
-    padding: 25px;
-    margin: auto;
-    margin-top: 80px;
-    margin-bottom: 35px;
-    width: 50%;
+    margin: 0;
+    margin-left: 1vw;
+    width: fit-content;
     text-align: center;
     border-radius: 2em;
+    color: var(--title-color);
 }
 h2 {
-    position: relative;
-    background: rgba(252, 238, 251, 0.69);
-    font-size: 3vw;
-    padding: 1vw;
     margin: auto;
-    margin-bottom: 40px;
-    margin-top: 10px;
-    width: 15%;
+    background: rgba(252, 238, 251, 0.69);
+    font-size: 2vw;
+    margin-top: 7vw;
+    padding: 1vw;
+    width: 10%;
     text-align: center;
     border-radius: 2em;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 h2:hover {
     background: rgb(252, 238, 251, .2);
+}
+h3{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: bold;
+    font-size: 4vw;
+    color: var(--text-color);
+}
+.titleContainer{
+    float: right;
+    margin-right: 5%;
+    margin-top: 15%;
+}
+.titleContainer1{
+    margin-left: 5%;
+    margin-top: 15%;
+}
+.containPic p{
+    width: 30%;
+    margin-top: 0;
+}
+#endTitle{
+    text-align: center;
 }
 input {
     background: transparent;
@@ -137,11 +272,10 @@ button {
 }
 .navBar {
     overflow: hidden;
-    background-color: grey;
-    position: fixed;
+    background-color: var(--head-color);
     top: 0;
     width: 100%;
-    height: 3vw;
+    height: 6vw;
     z-index: 10;
 }
 .navBar a {
@@ -153,6 +287,9 @@ button {
     text-align: center;
     padding: .5vw 6vw;
     text-decoration: none;
+}
+.navBar :first-child{
+    padding: 0;
 }
 .navBar a:hover {
     color: black;
@@ -178,14 +315,19 @@ background-color: black; /* Add a dark-grey background on hover */
 i {
     position: absolute;
     color: grey;
-    left: 1vw;
-    top: 1vw;
+    top: -1vw;
+    left: -1vw;
+    padding: 1vw;
+    background: lightgray;
+    border-radius: 50%;
 }
 i:hover{
     color: yellow;
+    background: grey;
 }
 .fas.fa-star{
     color: yellow;
+    background: grey;
 }
 #addMore {
     position: fixed;
