--- a/public/styles.css
+++ b/public/styles.css
@@ -6,13 +6,13 @@
     --head-color: rgba(89, 70, 64, 1);
 }
 
-
 body {
     margin: 0;
-    background-image: radial-gradient(circle, #e1e1e1, #e4e4e4, #e7e7e7, #eaeaea, #ededed);
+    background-color: var(--background-color);
     word-wrap: normal;
     width: 100;
     overflow: scroll;
+    -webkit-user-select: none;
 }
 a {
     color: inherit;
@@ -186,34 +186,39 @@ input {
     font-size: 2vw;
 }
 h3 {
+    margin: 2vw;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 #ingredientCards {
     padding: 0;
+    padding-left: 5%;
+    padding-right: 5%;
     text-align: center;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight: bold;
     font-size: 2vw;
     list-style: none;
-    display: inline-grid;
-    grid-auto-flow: column;
+    display: flex;
+    flex-direction: row;
+    overflow-x: scroll;
 }
 #ingredientCards li {
     padding: 0;
     list-style: none;
-    margin: 1vw;
     text-align: left;
-    border-bottom: solid;
 }
 #ingredientCards ul {
-    margin-left: auto;
-    margin-right: auto;
-    list-style: none;
-    padding: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-left: 0;
+    padding-top: 1vw;
+    padding-bottom: 2vw;
 }
 #ingredientCards img {
+    object-fit: cover;
     width: 20vw;
-    height: 20vw;
+    height: 30vw;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 #ingredientCards .cards img {
@@ -223,10 +228,9 @@ button {
     padding: 30px;
 }
 #ingredientCards ul ul{
-    grid-auto-flow: row;
     position: relative;
     width: 20vw;
-    height: 28vw;
+    height: 30vw;
     padding: 0;
     list-style: none;
     background: rgb(251, 248, 252);
@@ -245,12 +249,52 @@ button {
     margin: 1vw;
 }
 #ingredientCards ul ul li {
-    font-size: 1.5vw;
+    text-align: center;
+    font-size: 7vw;
+    position: absolute;
+    bottom: 1vw;
+    padding: 0;
+    list-style: none;
+    width: 100%;
+    background-color:  rgba(208, 232, 242, .5);
+    font-size: 3vw;
 }
 #ingredientCards .cards li {
     font-size: 2vw;
     text-align: center;
     border: none;
+}
+#horizontalScrollBar {
+    position: absolute;
+    display: block;
+    margin-left: 40%;
+    bottom: 2vw;
+    width: 20vw;
+    height: 2vw;
+    background-color: var(--text-color2);
+    border-radius: 1vw;
+}
+#horizontalThumb {
+    position: absolute;
+    display: block;
+    margin-left: 40%;
+    bottom: 2vw;
+    width: 5vw;
+    height: 2vw;
+    background-color: var(--text-color);
+    border-radius: 1vw;
+}
+#horizontalScrollBar p {
+    margin-top: 0;
+    color: var(--text-color);
+}
+#horizontalScrollBar :first-child {
+    float: left;
+    margin-left: -20%;
+}
+#horizontalScrollBar :nth-child(2) {
+    float: right;
+    margin-right: -20%;
 }
 .grid {
     display: grid;
@@ -262,14 +306,10 @@ button {
     padding-left: 1vw;
 }
 ::-webkit-scrollbar {
-    width: .5vw;
     height: 0;
+    width: 0;
 }
-::-webkit-scrollbar-thumb {
-    width: 1vw;
-    background-color: lightgrey;
-    border-radius: 1vw;
-}
+
 .navBar {
     overflow: hidden;
     background-color: var(--head-color);
@@ -289,7 +329,11 @@ button {
     text-decoration: none;
 }
 .navBar :first-child{
-    padding: 0;
+    font-family: 'Satisfy', cursive;
+    color: var(--title-color);
+    text-shadow: 3px 3px 2px rgb(255, 245, 230);
+    font-size: 3vw;
+    padding: 1vw;
 }
 .navBar a:hover {
     color: black;
@@ -364,17 +408,22 @@ i:hover{
     height: 100%;
     width: 100%;
 }
+#popup img{
+    height: 20vw;
+    Width: 20vw;
+}
 #popup{
     transform: scale(1.5);
     position: fixed;
     display: block;
+    overflow: visible;
     height: 40vw;
     top: 17vw;
     width: 50vw;
     margin-left: 25vw;
     margin-right: 25vw;
     padding-top: 3vw;
-    z-index: 5;
+    z-index: 15;
     background: rgb(251, 248, 252, .9);
 }
 #popup ul>*:hover{
