--- a/public/styles.css
+++ b/public/styles.css
@@ -7,8 +7,8 @@
     --head-color: rgb(40, 82, 94);
 }
 html {
-    width: 100%;
-    max-height: 100%;
+    width: 100vw;
+    max-height: 100vh;
     overflow: hidden;
 }
 body {
