--- a/public/styles.css
+++ b/public/styles.css
@@ -13,26 +13,27 @@ html {
 }
 body {
     margin: 0;
-    background: var(--background-color);
+    background: var(--head-color);
     word-wrap: normal;
     overflow: scroll;
     -webkit-user-select: none;
     min-height: 100vh;
 }
+
 a {
     color: inherit;
     text-decoration: none;
 }
 /* landing page */
 .home{
-    background: var(--background-color);
+    background: var(--head-color);
 }
 #title{
     z-index: 10;
     margin: auto;
-    margin-left: 10%;
+    text-align: center;
     margin-top: 35%;
-    font-size: 14vw;
+    font-size: 12vw;
     color: var(--title-color);
     font-family: 'Satisfy', cursive;
     text-shadow: .3vw .3vw .2vw rgb(255, 245, 230);
@@ -431,6 +432,9 @@ img{
 
 /* large phone */
 @media (min-width: 688px){
+    body, .home {
+        background: var(--background-color);
+    }
     #mobileButton {
         display: none;
     }
